--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Result</title>
-	</head>
-	<body><h1>YEAH SANDWICHES</h1>
-	<img src="http://bit.ly/RhrMEn" />
-		<p>I like eggs.</p>
-		<p>And ham!</p>
-		<p>But mostly sandwiches.</p>
-	</body>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>나만의 상호작용 페이지</title>
+    <link rel="stylesheet" href="style.css"> </head>
+<body>
+    <header>
+        <h1>환영합니다! 어떤 것을 드릴까요?</h1>
+    </header>
+
+    <main>
+        <div class="image-container">
+            <img src="coffee.png" alt="커피" id="coffeeImage">
+            <img src="tea.png" alt="차" id="teaImage">
+        </div>
+        <p id="messageDisplay">이미지를 클릭해 보세요!</p>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 당신의 이름. All rights reserved.</p>
+    </footer>
+
+    <script src="script.js"></script> </body>
 </html>
